# astrodb-template-db

./: .coverage  .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  astrodb-template.sqlite  database.toml  environment.yml  pyproject.toml  schema.yaml  setup.py
.devcontainer/: devcontainer.json
.github/: trigger_utils_tests
.github/workflows/: README.md  generate_db.yml  make_erd.yml  run_astrodb_utils.yml  run_scheduled_tests.yml  run_tests.yml
astrotemplate-db/: schema.py
data/: Instruments.json  PhotometryFilters.json  Publications.json  Regimes.json  astrotemplate.sqlite  dark_energy_source_1.json  dark_energy_source_2.json  dark_matter_source_1.json  sources_table_redo.csv  test.json
data/reference/: AssociationList.json  (+8 more)
docs/: README.md  conf.py  doc_requirements.txt  index.rst
schema/: __init__.py  schema.py  schema.yaml  schema_template.py
scripts/: add_fiters.py  build_documentation.py  build_postgres.py  build_schema_docs.py  ingest_gl229b.py  ingest_pso0318  ingest_publications.py  ingest_sources.py  ingest_spectra.py  intitialize_utils.py  make_auto_schema_erd.py  make_erd.py  make_schema_erd.py
src/: dark_energy_source_1.json  dark_energy_source_2.json  dark_matter_source_1.json
tests/: conftest.py  scheduled_checks.py  test_contents.py  test_contents_kinematics.py  test_contents_morphology.py  test_contents_parameters.py  test_contents_positions.py  test_contents_sources.py  test_database.py  test_felis.py  test_parameters.py  test_phot_filters.py  test_radial_velocities.py  test_schema.py  test_schema_yaml.py  test_sources.py
(+51 files in other folders)
